--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "dependencies": {
     "@types/express": "^4.17.17",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "notenv": "^2.0.3",
     "pg": "^8.9.0",
     "pg-format": "^1.0.4",
     "ts-node-dev": "^2.0.0",
